--- a/srv/.vscode/settings.json
+++ b/srv/.vscode/settings.json
@@ -10,6 +10,7 @@
         "system_error": "c",
         "connection_context.h": "c",
         "strings.h": "c",
-        "picohttpparser.h": "c"
+        "picohttpparser.h": "c",
+        "stdlib.h": "c"
     }
 }
