add: pronto_instance (maybe broken, didn't test it)

--- a/srv/.vscode/settings.json
+++ b/srv/.vscode/settings.json
@@ -15,6 +15,7 @@
         "http_request.h": "c",
         "string.h": "c",
         "c_json.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "cluster_worker.h": "c"
     }
 }
