add: super duper route matching + bugfix on GET request not being parsed properly

--- a/srv/.vscode/settings.json
+++ b/srv/.vscode/settings.json
@@ -16,6 +16,8 @@
         "string.h": "c",
         "c_json.h": "c",
         "stdio.h": "c",
-        "cluster_worker.h": "c"
+        "cluster_worker.h": "c",
+        "search.h": "c",
+        "stdbool.h": "c"
     }
 }
