add: ok http stuff. to debug why the futex facility returns an invalid code?

--- a/srv/.vscode/settings.json
+++ b/srv/.vscode/settings.json
@@ -18,6 +18,8 @@
         "stdio.h": "c",
         "cluster_worker.h": "c",
         "search.h": "c",
-        "stdbool.h": "c"
+        "stdbool.h": "c",
+        "errno.h": "c",
+        "node.h": "c"
     }
 }
