--- a/compose.yml
+++ b/compose.yml
@@ -5,30 +5,29 @@ networks:
     name: pronto
 
 services:
-  api-server:
-    container_name: api-server
-    build: 
-      context: srv
-      dockerfile: Dockerfile
-    ports:
-      - "7164:8080"
-    networks:
-      - pronto
-    entrypoint: ["./pronto-srv"]
+#  api-server:
+#    container_name: api-server
+#    build: 
+#      context: srv
+#      dockerfile: Dockerfile
+#    ports:
+#      - "7164:8080"
+#    networks:
+#      - pronto
+#    entrypoint: ["./pronto-srv"]
 
   srv-0:
     container_name: srv-0
     build: 
         context: client
         dockerfile: Dockerfile
-    networks:
-      - pronto
+    network_mode: host
     entrypoint: ["./pronto-client"]
-  srv-1:
-    container_name: srv-1
-    build: 
-        context: client
-        dockerfile: Dockerfile
-    networks:
-      - pronto
-    entrypoint: ["./pronto-client"]
+  #srv-1:
+  #  container_name: srv-1
+  #  build: 
+  #      context: client
+  #      dockerfile: Dockerfile
+  #  networks:
+  #    - pronto
+  #  entrypoint: ["./pronto-client"]
