add: only using bookkeeper mutex to change workers data

--- a/srv/.vscode/launch.json
+++ b/srv/.vscode/launch.json
@@ -30,7 +30,7 @@
         },*/
         {
             "name": "(gdb) Launch",
-            "type": "cppdbg",
+            "type": "lldb",
             "request": "launch",
             "program": "${workspaceFolder}/bin/pronto-srv",
             "args": [],
